# bell

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  package.nix
.github/workflows/: c-cpp.yml  clang-format.yml
cleanup-tree/: .clang-tidy  .clangd  CMakeLists.txt
cleanup-tree/cmake/: BuildOptions.cmake  LibrarySources.cmake
cleanup-tree/main/audio-dsp/include/: Engine.h
cleanup-tree/main/io/: BinaryStream.cpp  Logger.cpp  Socket.cpp  SocketStream.cpp  TCPSocket.cpp
cleanup-tree/main/io/include/: BinaryStream.h  ByteStream.h  MemoryStream.h  Socket.h  SocketStream.h  TCPSocket.h
cleanup-tree/main/io/utils/: Logger.h
cleanup-tree/test/: BinaryStreamTest.cpp  main.cpp
cmake/: FindMbedTLS.cmake  FindPortaudio.cmake  Findportaudio.cmake
docs/: dsp.md
example/: CMakeLists.txt  aactest.aac  iwyu.imp  main.cpp
example/opus/: config.h
example/scripts/: dsp_spectogram.py
examples/dsp/: CMakeLists.txt  main.cpp
include/: AudioSink.h  BaseHTTPServer.h  BellLogger.h  BellSocket.h  BellTask.h  BellUtils.h  BiquadFilter.h  BufferedStream.h  ByteStream.h  CryptoMbedTLS.h  CryptoOpenSSL.h  DecoderGlobals.h  FileStream.h  HTTPClient.h  HTTPServer.h  HTTPStream.h  JSONObject.h  Logger.h  MpegDashDemuxer.h  NanoPBHelper.h  Queue.h  TCPSocket.h  Task.h
include/audio/codec/: AACDecoder.h  AudioCodecs.h  BaseCodec.h  DecoderGlobals.h  MP3Decoder.h  OPUSDecoder.h  VorbisDecoder.h
include/audio/container/: BaseContainer.h  MP3Container.h  MP3Types.h  Mpeg4Atoms.h  Mpeg4Container.h  Mpeg4Types.h  WebmContainer.h
include/dsp/: AudioPipeline.h  AudioTransform.h  BellDSP.h  JSONTransformConfig.h  StreamInfo.h  TransformConfig.h
include/dsp/transforms/: AudioMixer.h  Biquad.h  BiquadCombo.h  BiquadTransform.h  Compressor.h  Gain.h  GainTransform.h  MonoDownmixTransform.h
include/platform/: TLSSocket.h  WrappedSemaphore.h
include/platform/win32/: win32shim.h
include/sinks/esp/: BufferedAudioSink.h  SPDIFAudioSink.h
include/sinks/unix/: ALSAAudioSink.h  NamedPipeAudioSink.h  PortAudioSink.h
libhelix-aac/: aaccommon.h  aacdec.h  assembly.h  buffers.c  helix_pgm.h  pgmspace.h  sbr.c
libhelix-mp3/: assembly.h  mp3dec.h  pgmspace.h
main/audio-codec/: AACDecoder.cpp  AudioCodecs.cpp  BaseCodec.cpp  DecoderGlobals.cpp  MP3Decoder.cpp  OPUSDecoder.cpp  VorbisDecoder.cpp
main/audio-codec/include/: AACDecoder.h  AudioCodecs.h  BaseCodec.h  CodecType.h  DecoderGlobals.h  MP3Decoder.h  OPUSDecoder.h  VorbisDecoder.h
main/audio-containers/: AACContainer.cpp  ADTSContainer.cpp  AudioContainers.cpp  BaseContainer.cpp  MP3Container.cpp  Mpeg4Container.cpp  Mpeg4Parser.cpp  Mpeg4ParserFrag.cpp  Mpeg4Utils.cpp  WebmContainer.cpp  WebmParser.cpp  WebmUtils.cpp
main/audio-containers/include/: AACContainer.h  ADTSContainer.h  AudioContainer.h  AudioContainers.h  BaseContainer.h  MP3Container.h  Mpeg4Atoms.h  Mpeg4Container.h  Mpeg4Types.h  WebmContainer.h  WebmElements.h
main/audio-dsp/: AudioMixer.cpp  AudioPipeline.cpp  AudioResampler.cpp  BellDSP.cpp  Biquad.cpp  BiquadCombo.cpp  Compressor.cpp  Gain.cpp
main/audio-dsp/include/: AudioMixer.h  AudioPipeline.h  AudioResampler.h  AudioTransform.h  BellDSP.h  Biquad.h  BiquadCombo.h  CentralAudioBuffer.h  Compressor.h  Gain.h  JSONTransformConfig.h  NlohmannJSONTransformConfig.h  StreamInfo.h  TransformConfig.h
main/audio-sinks/esp/: AC101AudioSink.cpp  BufferedAudioSink.cpp  ES8311AudioSink.cpp  ES8388AudioSink.cpp  ES9018AudioSink.cpp  InternalAudioSink.cpp  PCM5102AudioSink.cpp  SPDIFAudioSink.cpp  TAS5711AudioSink.cpp  ac101.c  es8311.c
main/audio-sinks/include/: AudioSink.h
main/audio-sinks/unix/: ALSAAudioSink.cpp  NamedPipeAudioSink.cpp  PortAudioSink.cpp
main/io/: BellHTTPServer.cpp  BellMQTTClient.cpp  BellTar.cpp  BinaryReader.cpp  BinaryStream.cpp  BufferedStream.cpp  CircularBuffer.cpp  EncodedAudioStream.cpp  FileStream.cpp  HTTPClient.cpp  HTTPStream.cpp  MGStreamAdapter.cpp  SocketStream.cpp  SocketUtils.cpp  TLSSocket.cpp  URLParser.cpp  X509Bundle.cpp  picohttpparser.c
main/io/include/: BellHTTPServer.h  BellMQTTClient.h  BellSocket.h  BellTar.h  BinaryReader.h  BinaryStream.h  BufferedStream.h  ByteStream.h  CircularBuffer.h  EncodedAudioStream.h  FileStream.h  HTTPClient.h  HTTPStream.h  JSONObject.h  MGStreamAdapter.h  SocketStream.h  SocketUtils.h  StreamUtils.h  TCPSocket.h  TLSSocket.h  UDPSocket.h  URLParser.h  X509Bundle.h  picohttpparser.h
main/platform/: MDNSBrowser.h  MDNSService.h  WrappedSemaphore.h
main/platform/apple/: MDNSBrowser.cpp  MDNSService.cpp  WrappedSemaphore.cpp
main/platform/esp/: MDNSBrowser.cpp  MDNSService.cpp  WrappedSemaphore.cpp
main/platform/linux/: MDNSBrowser.cpp  MDNSService.cpp  WrappedSemaphore.cpp
main/platform/win32/: MDNSService.cpp  WrappedSemaphore.cpp  win32shim.h
main/utilities/: BellLogger.cpp  BellUtils.cpp  Crypto.cpp  NanoPBExtensions.cpp  NanoPBHelper.cpp  SyslogLogger.cpp  aes.c
main/utilities/include/: BellLogger.h  BellTask.h  BellUtils.h  Crypto.h  NanoPBHelper.h  SyslogLogger.h  aes.h
proto/: CMakeLists.txt
src/: BellLogger.cpp  BinaryReader.cpp  BufferedStream.cpp  CryptoMBedTLS.cpp  CryptoOpenSSL.cpp  HTTPClient.cpp  HTTPServer.cpp  HTTPStream.cpp  NanoPBHelper.cpp
src/audio/codec/: AACDecoder.cpp  AudioCodecs.cpp  BaseCodec.cpp  DecoderGlobals.cpp  MP3Decoder.cpp  OPUSDecoder.cpp  VorbisDecoder.cpp
src/audio/container/: AudioContainers.cpp  BaseContainer.cpp  MP3Container.cpp  Mpeg4Container.cpp  Mpeg4Parser.cpp  Mpeg4ParserFrag.cpp  Mpeg4Utils.cpp  WebmParser.cpp  WebmUtils.cpp
src/dsp/: AudioPipeline.cpp  BellDSP.cpp
src/dsp/transforms/: AudioMixer.cpp  Biquad.cpp  BiquadCombo.cpp  BiquadTransform.cpp  Compressor.cpp  Gain.cpp  GainTransform.cpp  MonoDownmixTransform.cpp
src/platform/apple/: MDNSService.cpp  WrappedSemaphore.cpp
src/platform/esp/: MDNSService.cpp  TLSSocket.cpp
src/platform/linux/: MDNSService.cpp  TLSSocket.cpp
src/platform/win32/: WrappedSemaphore.cpp
src/sinks/esp/: BufferedAudioSink.cpp  (+1 more)
test/: BinaryStreamTest.cpp  CMakeLists.txt
(+29 files in other folders)
